# sdc11073

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT.md  Contributor_License_Agreement.md  LICENSE  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  config.yml  feature.md  feature_request.yml
.github/workflows/: build.yml  lint.yml  mypy.yml  pat_integration.yml  prerelease.yml  publish.yml  python-package.yml  release.yml  ruff.yml  rurff.yml
examples/: requestmanipulator.py
examples/ReferenceTest/: logging_default.jsn  reference_client.py  reference_consumer.py  reference_device.py  reference_mdib.xml  reference_provider.py  run.py  test_reference.py
examples/ReferenceTestV2/: PlugathonMdibV2.xml  discoproxyclient.py  mdib_test_sequence_2_v4(temp).xml  reference_consumer_v2.py  reference_provider_v2.py  run.py
examples/certs/: root_certificate.pem  user_certificate_root_signed.pem  user_private_key_encrypted.pem
pat/: PlugathonMdibV2.xml  README.md  common.py  consumer.py  discoproxyclient.py  logging_default.json  provider.py  reference_consumer_v2.py  reference_provider_v2.py  requestmanipulator.py  run.py
pat/ReferenceTest/: logging_default.json  readme.txt  reference_consumer.py  reference_provider.py  run.py  test_reference.py
pat/ReferenceTestV2/: PlugathonMdibV2.xml  common.py  discoproxyclient.py  logging_default.json  reference_consumer_v2.py  reference_provider_v2.py  run.py
pat/consumer/: step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py
pat/consumer_tests/: step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py
sdc11073/: __init__.py  addressing.py  certloader.py  commlog.py  compression.py  dataconverters.py  definitions_base.py  definitions_sdc.py  dpws.py  etc.py  eventing_types.py  exceptions.py  ext_qnames.py  httprequesthandler.py  isoduration.py  location.py  loghelper.py  metadata.py  mex_types.py  msg_qnames.py  msgtypes.py  multikey.py  namespaces.py  pm_qnames.py  pmtypes.py  safety.py  schema_resolver.py  sitypes.py  wsdiscovery.py  xmlparsing.py
sdc11073/ca/: certificates_readme.txt  cyphers.json  sdccert.pem  userkey.pem
sdc11073/dispatch/: __init__.py  dispatchkey.py  messageconverter.py  pathelementregistry.py  request.py
sdc11073/httpserver/: compression.py  httpreader.py  httprequesthandler.py  httpserverimpl.py
sdc11073/mdib/: clientmdib.py  clientmdibxtra.py  containerbase.py  containerproperties.py  descriptorcontainers.py  devicemdib.py  devicemdibxtra.py  devicewaveform.py  mdibbase.py  msgreader.py  statecontainers.py  transactions.py
sdc11073/netconn/: __init__.py  ntifmanagerdll.py  posixifmanager.py
sdc11073/observableproperties/: __init__.py  observables.py  valuecollector.py
sdc11073/pysoap/: msgfactory.py  msgreader.py  soapclient.py  soapclient_async.py  soapclientpool.py  soapenvelope.py
sdc11073/recording/: __init__.py  clientrecorder.py  mdibplayer.py
sdc11073/roles/: __init__.py  alarmprovider.py  audiopauseprovider.py  clockprovider.py  contextprovider.py  daynightprovider.py  metricprovider.py  nomenclature.py  operationprovider.py  patientcontextprovider.py  product.py  providerbase.py
sdc11073/sdcclient/: components.py  hostedservice.py  httpserver.py  localizationservice.py  manipulator.py  notificationsdispatcher.py  operations.py  request_handler_deferred.py  sdcclientimpl.py  subscription.py
sdc11073/sdcdevice/: __init__.py  components.py  dpwshostedservice.py  exceptions.py  hostedserviceimpl.py  httpserver.py  intervaltimer.py  localizationservice.py  operations.py  periodicreports.py  sco.py  scopesfactory.py  sdc_handlers.py  sdcdeviceimpl.py  sdcservicesimpl.py  servicesfactory.py  subscriptionmgr.py  subscriptionmgr_async.py  waveforms.py
sdc11073/xml_types/: addressing.py  addressing_types.py  basetypes.py  dataconverters.py  dpws.py  dpws_types.py  eventing_types.py  ext_qnames.py  mex_types.py  msg_qnames.py  msg_types.py  msgtypes.py  pm_qnames.py  pm_types.py  pmtypes.py  wsd_types.py  xml_structure.py
sdc11073/xsd/: BICEPS_ParticipantModel.xsd  SafetyInformation.xsd  wsdd-discovery-1.1-schema-os.xsd  wsdd-dpws-1.1-schema-os.xsd  wsdl.xsd  xml.xsd
src/sdc11073/: __init__.py  certloader.py  commlog.py  compression.py  dataconverters.py  definitions_base.py  definitions_sdc.py  etc.py  exceptions.py  httprequesthandler.py  intervaltimer.py  isoduration.py  location.py  loghelper.py  msgtypes.py  multikey.py  namespaces.py  network.py  nomenclature.py  pmtypes.py  safety.py  schema_resolver.py  wsdiscovery.py  xml_utils.py  xmlparsing.py
tests/: 70041_MDIB_Final.xml  70041_MDIB_multi.xml  __init__.py  base_test.py  foo_schema.xsd  html_testrunner.py  mdib_tns.xml  mdib_two_mds.xml  mockstuff.py  reference_mdib.xml  test_additional_schema.py  test_alarmprovider.py  test_alertsignaldelegate.py  test_client_device.py  test_client_device_xml_mdib.py  test_client_proxies.py  test_client_waveform.py  test_clientmdib.py  test_codings.py  test_comm_logger.py  test_compression.py  test_consumer.py  test_consumer_subscription.py  test_containerproperties.py  test_copy_node.py  test_dataconverters.py  test_descriptorcontainers.py  test_device.py  test_device_periodic_reports.py  test_device_services.py  test_device_subscriptions.py  test_device_waveform.py  test_discovery.py  test_draegerlocation.py  test_entity_client_device.py  test_entity_operations.py  test_entity_transaction.py  test_interval_timer.py  test_isoduration.py  test_localizationservice.py  (+30 more)
tests/certificates/: readme.txt  test_certificate.pem  test_private_key.pem
tests/xml/: test_xml_utils.py
tools/: generate_qnames.py
tutorial/: README.rst  codedvaluecomparator.py  more_examples.txt  readme.rst
tutorial/consumer/: consumer.py
tutorial/productandroles/: alarmprovider.py  audiopauseprovider.py  clockprovider.py  componentprovider.py  contextprovider.py  exampleproduct.py  metricprovider.py  nomenclature.py  (+2 more)
(+231 files in other folders)
