[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[project]
name = "sdc11073"
version = "0.0.0"
authors = [
    { name = "Bernd Deichmann" },
]
maintainers = [
    { name = "Leon Budnick", email = "leon.budnick@draeger.com" },
]
description = "Pure python implementation of IEEE11073 SDC protocol"
readme = "README.rst"
requires-python = ">=3.10, <3.15"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux'
]
keywords = [
    "SDC",
    "IEEE11073",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    'lxml>=6.0.2',
    'ifaddr>=0.2.0',
    'aiohttp>=3.13.3',
]

[project.urls]
"Homepage" = "https://github.com/Draegerwerk/sdc11073"
"Bug Tracker" = "https://github.com/Draegerwerk/sdc11073/issues"

[project.optional-dependencies]
lz4 = [
    'lz4>=4.4.5',
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-html>=4.2.0",
    "pytest-cov>=7.1.0",
    "sdc11073[lz4]",
    "hypothesis[zoneinfo]>=6.148.2; platform_system == 'Windows'",
    "hypothesis>=6.148.2; platform_system != 'Windows'",
]
dev = [
    { include-group = "test" },
    "ruff>=0.15.7",
]

[tool.pytest]
testpaths = [
    "tests",
]
filterwarnings = [# https://docs.python.org/3/library/warnings.html#warning-filter
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# https://docs.pytest.org/en/latest/how-to/logging.html#live-logs
# please note that live-logs for cli while using xdist is not working. see https://github.com/pytest-dev/pytest-xdist/issues/574
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s %(levelname)s (%(threadName)-10s) %(filename)s:%(lineno)d %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "debug"
log_file_format = "%(asctime)s %(levelname)s (%(threadName)-10s) %(filename)s:%(lineno)d %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S:%f"

[tool.ruff]
line-length = 120  # https://docs.astral.sh/ruff/settings/#line-length
target-version = "py310" # https://docs.astral.sh/ruff/settings/#target-version
# Allow imports relative to the "src" and "tests" directories.
src = ["src", "tests"]  # https://docs.astral.sh/ruff/settings/#src
# In addition to the standard set of exclusions, omit all tutorials and examples
extend-exclude = ["examples", "tools", "tutorial"] # https://docs.astral.sh/ruff/settings/#extend-exclude

[tool.ruff.lint]
select = ["ALL"]  # https://docs.astral.sh/ruff/settings/#select
extend-ignore = [# https://docs.astral.sh/ruff/settings/#extend-ignore
    "ANN204", # https://docs.astral.sh/ruff/rules/missing-return-type-special-method/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "C408", # https://docs.astral.sh/ruff/rules/unnecessary-collection-call/
    "C409", # https://docs.astral.sh/ruff/rules/unnecessary-literal-within-tuple-call/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "EM101", # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
    "S311", # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage/
    "SIM102", # collapsible-if
    "T201", # https://docs.astral.sh/ruff/rules/print/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "FBT001", # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
    "FBT002", # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
    "FBT003", # https://docs.astral.sh/ruff/rules/boolean-positional-value-in-call/
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # https://docs.astral.sh/ruff/settings/#allow-star-arg-any
suppress-none-returning = true # https://docs.astral.sh/ruff/settings/#suppress-none-returning

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true  # https://docs.astral.sh/ruff/settings/#allow-dict-calls-with-keyword-arguments

[tool.ruff.lint.pycodestyle]
max-doc-length = 120 # https://docs.astral.sh/ruff/settings/#max-doc-length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = [
    "SLF001",  # Private member accessed
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "E722",  # Do not use bare `except`
    "PT009", # Use a regular `assert` instead of unittest-style `assertEqual`
    "PT027", # Use `pytest.raises` instead of unittest-style `assertRaises`
]

[tool.coverage.report]
exclude_also = [# https://coverage.readthedocs.io/en/latest/config.html#report-exclude-also
    "raise AssertionError",
    "raise NotImplementedError",
    "if (typing\\.)?TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
    "self\\._?logger\\.(info|debug|warning|error|exception|critical)"
]
ignore_errors = true # https://coverage.readthedocs.io/en/latest/config.html#report-ignore-errors

[tool.coverage.run]
parallel = true # https://coverage.readthedocs.io/en/latest/config.html#run-parallel
